# payrollTax

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  config.csv  configHandler.cpp  configHandler.hpp  functional_helper.cpp  functional_helper.hpp  mberech.cpp  mlstjahr.cpp  mosonst.cpp  mpara.cpp  mpara.hpp  mre4.cpp  mre4.hpp  mre4abz.cpp  mre4alte.cpp  mre4jl.cpp  mre4sonst.cpp  msolz.cpp  msolzsts.cpp  msonst.cpp  mst5-6.cpp  mvmt.cpp  mvsp.cpp  mztabfb.cpp  up5-6.cpp  upanteil.cpp  upevp.cpp  uplstlzz.cpp  upmlst.cpp  uptab21.cpp  uptab21.hpp  upvkv.cpp  upvkvlzz.cpp
src/: CMakeLists.txt  functional_helper.cpp  functional_helper.hpp  main.cpp  tags  uptab21.cpp  uptab21.hpp
test/: CMakeLists.txt  test2023_KRV2_PKV1_PKPV0.csv  test2023_West_KRV0_PKV0_KVZ16.csv  testfile.cpp  testfile.hpp
